# multiscale-galactose

./: .RData  .gitignore  README.md  TODO_multiscale-galactose.README  backupDatabase.sh  buildCopasi.sh  buildRoadrunner.sh  comp-reaction.txt  copySBML.sh  copyTimecourses.sh  deployDjango.sh  installR.txt  pip_update.py  ssh_config  startAllSimulations.sh  startSimulation.sh  syncDjangoSBML.sh  syncSBML.sh  syncTimecourses.sh  testRoadrunner.py  test_servers.sh  updateRequirements.sh
.hg/: dirstate  last-message.txt  undo.dirstate
R/: AgingGEC.R  DemoAnalysis.R  DemoPreprocessing.R  DilutionAnalysisData.R  DilutionCurves.R  DilutionCurvesData.R  Dilution_Analysis.R  Dilution_Curves_v4_Nc20_Nf1.xml  GECData.R  GalactoseCellPreprocessing.R  GalactoseEliminationAnalysis.R  Galactose_Elimination_Analysis.R  GalactosemiasAnalysis.R  Galactosemias_analysis.R  LiverScaling.R  MultipleIndicator.R  MultipleIndicatorData.R  MultipleIndicatorPreprocessing.R  ParameterDistributions.R  ParameterFile.R  ParameterFileFunctions.R  ReadDataFunctions.R  Settings.R  SimulationPlot.R  T1_parameters.csv  TestLibSBML.R  ggplot_examples.R  ggplot_test.R  makePlot.R
circos/: circos.conf  ideogram.conf  plots.conf
cpp/: .gitignore  copasi_setupscript
cpp/copasi/CopasiModelRunner/: .cproject  .project  CMakeLists.txt  InitialDependencies.dot  SimulationDependencies.dot  example3.txt  makefile  test.csv  test.ini  test.pars  test_CopasiModelRunner.sh
cpp/copasi/CopasiModelRunner/examples/: Koenig_Galactose_v0.1_Nc10.xml  Koenig_Galactose_v0.1_Nc20.cps  Koenig_Galactose_v0.1_Nc5.cps
cpp/copasi/CopasiModelRunner/results/: Galactose_v3_Nc1_Nf5.cps  Galactose_v3_Nc20_Nf5.xml  Galactose_v3_Nc5_Nf5.xml  Timecourse_report.txt  example3.txt
cpp/copasi/CopasiModelRunner/src/: CopasiModelRunner.cpp  IntList.cpp  IntList.h  MParameter.cpp  MParameter.h  ModelParameters.cpp  ModelParameters.h  ModelSimulator.cpp  ModelSimulator.h  TimeCourseParameters.cpp  TimeCourseParameters.h  TimecourseParameters.cpp  TimecourseParameters.h
database/: SchemaSpyGUI_multiscale-galactose_properties.xml  anomalies.html  backup_db.sh  columns.byAuto.html  columns.byColumn.html  columns.byDefault.html  columns.byNulls.html  columns.bySize.html  columns.byTable.html  columns.byType.html  constraints.html  deletionOrder.txt  index.html  insertionOrder.txt  multiscale-galactose.public.xml  relationships.html  utilities.html
docs/: ssh_config
experimental_data/: .RData  120524_Gephard_Enzymes activities_in_liver.doc  130510_Koenig_zonation_data.xlsx  metabolite_ranges.xlsx
figures/: Normal_Concentrations.tif
manuscript/: Koenig2014_Galactose_Supplement.doc  Manuscript-2015-01-29.docx  (+10 more)
(+3564 files in other folders)
